table row link mod

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -173,7 +173,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 				"aoColumns": [
 				{ "mData": "html_id",
 				"mRender" : function ( data, type, full) {
-										return '<a href="'+ full[0] +'">'+full[0]+'</a>';
+										return '<a href="'+ data[0] +'">'+data[0]+'</a>';
 															}
 				},
 				{ "mData": "feature_value" },
@@ -189,11 +189,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[2],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -207,11 +203,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[3],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -225,11 +217,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[4],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -243,11 +231,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[5],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -261,11 +245,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[6],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -279,11 +259,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[7],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -297,11 +273,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[8],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -315,11 +287,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[9],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -333,11 +301,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[10],
 			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ full[0] +'">'+full[0]+'</a>';
-														}
-			},
+			        { "mData": "html_id" },
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
