table row link mod

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -173,7 +173,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 				"aoColumns": [
 				{ "mData": "html_id",
 				"mRender" : function ( data, type, full) {
-										return '<a href="'+ data[0] +'">'+data[0]+'</a>';
+										return '<a href="'+ data +'">'+data+'</a>';
 															}
 				},
 				{ "mData": "feature_value" },
