table row link mod

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -189,7 +189,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[2],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -203,7 +207,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[3],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -217,7 +225,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[4],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -231,7 +243,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[5],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -245,7 +261,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[6],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -259,7 +279,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[7],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -273,7 +297,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[8],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -287,7 +315,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[9],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -301,7 +333,11 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ feature_list[10],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
