--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -171,7 +171,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[2],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -185,7 +189,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[3],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -199,7 +207,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[4],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -213,7 +225,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[5],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -227,7 +243,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[6],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -241,7 +261,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[7],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -255,7 +279,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[8],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -269,7 +297,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[9],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -283,7 +315,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[10],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
@@ -297,7 +333,11 @@ var feature_list= {2:"number_of_images_missing_alt",
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[11],
 			"aoColumns": [
-			        { "mData": "html_id" },
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
 			        { "mData": "feature_value" },
 			        { "mData": "cluster_win_mean" },
 			        { "mData": "delta" }
