--- a/statseo.html
+++ b/statseo.html
@@ -482,18 +482,18 @@ nv.addGraph(function() {
 									<table cellpadding="0" cellspacing="0" border="0" class="display" id="example3">
 										<thead>
 											<tr>
-												<!-- <th width="5%">Influence rank</th>
+												<th width="5%">Influence rank</th>
 													<th width="55%">Feature</th>
 													<th width="10%">#URLs at risk</th>
 													<th width="10%">Average at risk SQ</th>
 													<th width="10%">#URLs healthy</th>
-													<th width="10%">Average healthy SQ</th> -->
-													<th>Influence rank</th>
+													<th width="10%">Average healthy SQ</th>
+													<!-- <th>Influence rank</th>
 													<th>Feature</th>
 													<th>#URLs at risk</th>
 													<th>Average at risk SQ</th>
 													<th>#URLs healthy</th>
-													<th>Average healthy SQ</th>
+													<th>Average healthy SQ</th> -->
 												</tr>
 											</thead>
 											<tbody>
@@ -526,18 +526,18 @@ nv.addGraph(function() {
 												<table cellpadding="0" cellspacing="0" border="0" class="display" id="example3b">
 													<thead>
 														<tr>
-															<!-- <th width="5%">Influence rank</th>
+															<th width="5%">Influence rank</th>
 																<th width="55%">Feature</th>
 																<th width="10%">#URLs at risk</th>
 																<th width="10%">Average at risk SQ</th>
 																<th width="10%">#URLs healthy</th>
-																<th width="10%">Average healthy SQ</th> -->
-																<th>Influence rank</th>
+																<th width="10%">Average healthy SQ</th>
+																<!-- <th>Influence rank</th>
 																<th>Feature</th>
 																<th>#URLs at risk</th>
 																<th>Average at risk SQ</th>
 																<th>#URLs healthy</th>
-																<th>Average healthy SQ</th>
+																<th>Average healthy SQ</th> -->
 															</tr>
 														</thead>
 														<tbody>
