side-by-side table mod

--- a/statseo.html
+++ b/statseo.html
@@ -513,7 +513,7 @@ nv.addGraph(function() {
 									</div> <!-- panel-body -->
 								</div> <!-- panel- panel danger -->						
 							</div>  <!-- span6 -->
-		
+		<div class="spacer"></div>
 							<div class="span6">
 										<div class="panel panel-success" id="healthyBackLinks">
 											<div class="panel-heading">
