--- a/statseo.html
+++ b/statseo.html
@@ -297,11 +297,22 @@ var websiteName = websiteSplit[1];
 <script src="src/models/multiBarHorizontal.js"></script>
 <script src="src/models/multiBarHorizontalChart.js"></script>
 <script src="assets/js/stream_layers.js"></script>
+
 <script>
+
+
+
+var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
+
+var long_short_data = $.getJSON(topLevelFile, function(json) {
+    console.log(json); // this will show the info it in firebug console
+});
+
+
 
 // data for chart
 
-long_short_data = [
+long_short_data_old = [
 	{
 		"key": "Healthy",
 		"color": "#00cc00",
