--- a/statseo.html
+++ b/statseo.html
@@ -306,18 +306,18 @@ var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
 //     console.log(json); // this will show the info it in firebug console
 // });
 
-var long_short_data = $.getJSON( "/json/toplevel/alchemyviral_ybar.json", function() {
-  console.log( "success" );
-})
-  .done(function() {
-    console.log( "second success" );
-  })
-  .fail(function() {
-    console.log( "error" );
-  })
-  .always(function() {
-    console.log( "complete" );
-  });
+// var long_short_data = $.getJSON( "/json/toplevel/alchemyviral_ybar.json", function() {
+//   console.log( "success" );
+// })
+//   .done(function() {
+//     console.log( "second success" );
+//   })
+//   .fail(function() {
+//     console.log( "error" );
+//   })
+//   .always(function() {
+//     console.log( "complete" );
+//   });
 
 // var long_short_data = jsonLoaded;
 
@@ -369,6 +369,7 @@ long_short_data_old = [
 	}
 ];
 
+d3.json('/json/toplevel/alchemyviral_ybar.json', function(data) {
 
 var chart;
 nv.addGraph(function() {
@@ -387,7 +388,7 @@ nv.addGraph(function() {
       .tickFormat(d3.format(',.2f'));
 
   d3.select('#chart1 svg')
-      .datum(long_short_data)
+      .datum(data)
       .call(chart);
 
   nv.utils.windowResize(chart.update);
@@ -396,7 +397,7 @@ nv.addGraph(function() {
 
   return chart;
 });
-
+});
 
 
 </script>
