barchart data load in from JSON file

--- a/statseo.html
+++ b/statseo.html
@@ -369,7 +369,7 @@ long_short_data_old = [
 	}
 ];
 
-d3.json('/json/toplevel/alchemyviral_ybar.json', function(data) {
+d3.json(topLevelFile, function(data) {
 
 var chart;
 nv.addGraph(function() {
