barchart data load in from JSON file

--- a/statseo.html
+++ b/statseo.html
@@ -171,7 +171,7 @@ text {
     
 	
 	<script>
-	var websiteURL = "www.alchemyviral.com";
+	var websiteURL = "www.rawpearls.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
@@ -301,26 +301,6 @@ var websiteName = websiteSplit[1];
 <script>
 
 var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
-
-// var jsonLoaded = $.getJSON(topLevelFile, function(json) {
-//     console.log(json); // this will show the info it in firebug console
-// });
-
-// var long_short_data = $.getJSON( "/json/toplevel/alchemyviral_ybar.json", function() {
-//   console.log( "success" );
-// })
-//   .done(function() {
-//     console.log( "second success" );
-//   })
-//   .fail(function() {
-//     console.log( "error" );
-//   })
-//   .always(function() {
-//     console.log( "complete" );
-//   });
-
-// var long_short_data = jsonLoaded;
-
 
 // data for chart
 
