barchart data load in from JSON file

--- a/statseo.html
+++ b/statseo.html
@@ -168,10 +168,9 @@ text {
 }
 
 </style>
-    
-	
+
 	<script>
-	var websiteURL = "www.rawpearls.com";
+	var websiteURL = "www.alchemyviral.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
