mods to display winning and losing means in Xhat/XhatOff

--- a/statseo.html
+++ b/statseo.html
@@ -171,16 +171,16 @@ text {
 
 
 	
-	<!-- <th width="5%">Influence rank</th>
-	<th width="55%">Feature</th>
-	<th width="10%">#URLs at risk</th>
-	<th width="10%">Average group feature value</th>
-	<th width="10%">Average losing mean</th> 
-	<th width="10%">Average at risk SQ</th>
-	<th width="10%">#URLs healthy</th>
-	<th width="10%">Average group feature value</th>
-	<th width="10%">Average winning mean</th>
-	<th width="10%">Average healthy SQ</th> -->
+											<!-- <th width="5%">Influence rank</th>
+											<th width="55%">Feature</th>
+											<th width="5%">Average losing mean</th> 
+											<th width="5%">Average winning mean</th>
+											<th width="5%">#URLs at risk</th>
+											<th width="5%">Average feature value</th>
+											<th width="5%">Average at risk SQ</th>
+											<th width="5%">#URLs healthy</th>			
+											<th width="5%">Average feature value</th>
+											<th width="5%">Average healthy SQ</th> -->
 
 	<script>
 	var websiteURL = "www.alchemyviral.com";
@@ -528,14 +528,14 @@ nv.addGraph(function() {
 										<tr>
 											<th width="5%">Influence rank</th>
 											<th width="55%">Feature</th>
-											<th width="10%">#URLs at risk</th>
-											<th width="10%">Average group feature value</th>
-											<th width="10%">Average losing mean</th> 
-											<th width="10%">Average at risk SQ</th>
-											<th width="10%">#URLs healthy</th>
-											<th width="10%">Average group feature value</th>
-											<th width="10%">Average winning mean</th>
-											<th width="10%">Average healthy SQ</th>
+											<th width="5%">Average losing mean</th> 
+											<th width="5%">Average winning mean</th>
+											<th width="5%">#URLs at risk</th>
+											<th width="5%">Average feature value</th>
+											<th width="5%">Average at risk SQ</th>
+											<th width="5%">#URLs healthy</th>			
+											<th width="5%">Average feature value</th>
+											<th width="5%">Average healthy SQ</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -545,13 +545,13 @@ nv.addGraph(function() {
 										<tr>
 											<th>Influence rank</th>
 											<th>Feature</th>
-											<th>#URLs at risk</th>
-											<th>Average group feature value</th>
-											<th>Average losing mean</th>
-											<th>Average at risk SQ</th>
-											<th>#URLs healthy</th>
-											<th>Average group feature value</th>
+											<th>Average losing mean</th> 
 											<th>Average winning mean</th>
+											<th>#URLs at risk</th>
+											<th>Average feature value</th>
+											<th>Average at risk SQ</th>
+											<th>#URLs healthy</th>			
+											<th>Average feature value</th>
 											<th>Average healthy SQ</th>
 										</tr>
 									</tfoot>
