mods to display winning and losing means in Xhat/XhatOff

--- a/statseo.html
+++ b/statseo.html
@@ -215,7 +215,7 @@ var websiteName = websiteSplit[1];
 		null,
 		null,
 		null,
-		{"bVisible": false}		
+		{"bVisible": false},		
 		{"bVisible": false},
 		{"bVisible": false},
 		{"bVisible": false},
@@ -265,7 +265,7 @@ var websiteName = websiteSplit[1];
 		null,
 		null,
 	    null,
-        {"bVisible": false}		
+        {"bVisible": false},		
 		{"bVisible": false},
 		{"bVisible": false},
 		{"bVisible": false},
