mods to display winning and losing means in Xhat/XhatOff

--- a/statseo.html
+++ b/statseo.html
@@ -238,7 +238,7 @@ var websiteName = websiteSplit[1];
 			null,
 			null,
 			{"bVisible": false},
-			null,
+			{"bVisible": false},
 			{"bVisible": false},
 			{"bVisible": false},
 			null,
@@ -288,7 +288,7 @@ var websiteName = websiteSplit[1];
 			null,
 			null,
 			{"bVisible": false},
-			null,
+			{"bVisible": false},
 			{"bVisible": false},
 			{"bVisible": false},
 			null,
