--- a/statseo.html
+++ b/statseo.html
@@ -501,6 +501,12 @@ nv.addGraph(function() {
 
 
 		<hr>
+		<div class = "well">
+	  
+			<h2>Onsite pages summary</h2>
+			<p></p>
+		</div>
+		
 		<div class="row-fluid pitch">
 			<!-- <hr> -->
 				  
