mods to add dizzyheights.com data

--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -129,24 +129,25 @@ var websiteURL = "www.alchemyviral.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
-var feature_list= {2:"number_of_images_missing_alt",
-3:"number_of_embedded_javascripts",
-4:"title_number_of_dictionary_words",
-5:"number_of_images",
-6:"number_of_scripts",
-7:"ratio_of_common_words_to_total",
-8:"number_of_inline_css_styles",
-9:"number_of_images_in_body",
-10:"html5_detected",
-11:"maximum_length_of_h1",
-12:"ratio_of_rare_words_to_total",
-13:"average_length_of_h1",
-14:"number_of_embedded_styles",
-15:"number_of_iframes",
-16:"number_of_external_css_styles",
-17:"maximum_length_of_h2",
-18:"average_length_of_h2",
-19:"number_of_dhtml_scripts"
+var feature_list= {2:"number_of_inline_css_styles",
+4:"number_of_images_missing_alt",
+5:"number_of_h1_instances",
+6:"number_of_images",
+7:"total_number_of_words",
+8:"total_number_of_dictionary_words",
+9:"number_of_hyperlinks_with_html",
+10:"number_of_unique_words",
+11:"ratio_of_dictionary_words_to_total",
+12:"number_of_destination_titles_same_as_anchor_text",
+13:"maximum_length_of_h1",
+14:"average_length_of_h1",
+16:"number_of_duplicate_words",
+17:"number_of_hyperlinks_with_file",
+18:"number_of_rare_words",
+19:"total_number_of_5k_common_words",
+20:"number_of_hyperlinks_with_file",
+21:"number_of_rare_words",
+22:"number_of_hyperlinks_with_file"
 };
 
 	$(document).ready(function() {
