--- a/statseo.html
+++ b/statseo.html
@@ -187,7 +187,7 @@ text {
 	-->
 
 <script>
-var websiteURL = "www.alchemyviral.com";
+var websiteURL = "www.dizzyheights.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
