--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -125,11 +125,14 @@
 
 // data for chart
 
-var websiteURL = "www.alchemyviral.com";
+var websiteURL = "www.dizzyheights.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
-var feature_list= {2:"number_of_inline_css_styles",
+var feature_list= {
+	//1:"average_backlink_flesch_reading_ease",
+2:"number_of_inline_css_styles",
+//3:"average_backlink_flesch_kincaid_grade",
 4:"number_of_images_missing_alt",
 5:"number_of_h1_instances",
 6:"number_of_images",
@@ -141,13 +144,14 @@ var feature_list= {2:"number_of_inline_css_styles",
 12:"number_of_destination_titles_same_as_anchor_text",
 13:"maximum_length_of_h1",
 14:"average_length_of_h1",
+//15:"average_backlink_dale_chall_readability",
 16:"number_of_duplicate_words",
 17:"number_of_hyperlinks_with_file",
 18:"number_of_rare_words",
 19:"total_number_of_5k_common_words",
-20:"number_of_hyperlinks_with_file",
-21:"number_of_rare_words",
-22:"number_of_hyperlinks_with_file"
+20:"number_of_titles_same_as_h1",
+21:"number_of_iframes",
+22:"html5_detected"
 };
 
 	$(document).ready(function() {
@@ -184,24 +188,24 @@ var feature_list= {2:"number_of_inline_css_styles",
 			"aaSorting": [[ 3, "desc" ]]
 		} );
 	} );
-	$(document).ready(function() {
-		$('#example3').dataTable( {
-			"bProcessing": true,
-			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
-			"sAjaxDataProp": "offsite."+ feature_list[3],
-			"aoColumns": [
-			{ "mData": "html_id",
-			"mRender" : function ( data, type, full) {
-									return '<a href="'+ data +'">'+data+'</a>';
-														}
-			},
-			        { "mData": "feature_value" },
-			        { "mData": "cluster_win_mean" },
-			        { "mData": "delta" }
-					],
-			"aaSorting": [[ 3, "desc" ]]
-		} );
-	} );
+	// $(document).ready(function() {
+// 		$('#example3').dataTable( {
+// 			"bProcessing": true,
+// 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+// 			"sAjaxDataProp": "offsite."+ feature_list[3],
+// 			"aoColumns": [
+// 			{ "mData": "html_id",
+// 			"mRender" : function ( data, type, full) {
+// 									return '<a href="'+ data +'">'+data+'</a>';
+// 														}
+// 			},
+// 			        { "mData": "feature_value" },
+// 			        { "mData": "cluster_win_mean" },
+// 			        { "mData": "delta" }
+// 					],
+// 			"aaSorting": [[ 3, "desc" ]]
+// 		} );
+// 	} );
 	$(document).ready(function() {
 		$('#example4').dataTable( {
 			"bProcessing": true,
@@ -333,6 +337,186 @@ var feature_list= {2:"number_of_inline_css_styles",
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
 			"sAjaxDataProp": "offsite."+ feature_list[11],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example12').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[12],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example13').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[13],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example14').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[14],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	// $(document).ready(function() {
+// 		$('#example15').dataTable( {
+// 			"bProcessing": true,
+// 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+// 			"sAjaxDataProp": "offsite."+ feature_list[15],
+// 			"aoColumns": [
+// 			{ "mData": "html_id",
+// 			"mRender" : function ( data, type, full) {
+// 									return '<a href="'+ data +'">'+data+'</a>';
+// 														}
+// 			},
+// 			        { "mData": "feature_value" },
+// 			        { "mData": "cluster_win_mean" },
+// 			        { "mData": "delta" }
+// 					],
+// 			"aaSorting": [[ 3, "desc" ]]
+// 		} );
+// 	} );
+	$(document).ready(function() {
+		$('#example16').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[16],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example17').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[17],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example18').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[18],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example19').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[19],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+	$(document).ready(function() {
+		$('#example20').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[20],
+			"aoColumns": [
+			{ "mData": "html_id",
+			"mRender" : function ( data, type, full) {
+									return '<a href="'+ data +'">'+data+'</a>';
+														}
+			},
+			        { "mData": "feature_value" },
+			        { "mData": "cluster_win_mean" },
+			        { "mData": "delta" }
+					],
+			"aaSorting": [[ 3, "desc" ]]
+		} );
+	} );
+		$(document).ready(function() {
+		$('#example21').dataTable( {
+			"bProcessing": true,
+			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrillOff.json",
+			"sAjaxDataProp": "offsite."+ feature_list[21],
 			"aoColumns": [
 			{ "mData": "html_id",
 			"mRender" : function ( data, type, full) {
