--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -194,7 +194,9 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 
 		$(document).ready(function() {
 			$('#example1').dataTable( {
-				//"bProcessing": true,
+				"oLanguage": {
+				      "sEmptyTable": "No harmful URLs identified"
+				    },
 				"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 				"sAjaxDataProp": "onsite."+ feature_list[1],
 				"aoColumns": [
@@ -207,7 +209,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 				{ "mData": "cluster_win_mean" },
 				{ "mData": "delta" }
 				],
-				"aaSorting": [[ 3, "desc" ]]
+				"aaSorting": [[ 3, "desc" ]],
 			} );
 	} );
 	$(document).ready(function() {
