mods to add dizzyheights.com data

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -195,7 +195,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 		$(document).ready(function() {
 			$('#example1').dataTable( {
 				"oLanguage": {
-				      "sEmptyTable": "No harmful URLs identified"
+				      "sInfoEmpty": "No entries to show"
 				    },
 				"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 				"sAjaxDataProp": "onsite."+ feature_list[1],
