mods to add dizzyheights.com data

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -193,7 +193,7 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 
 
 		$(document).ready(function() {
-			$('#example1').dataTable( {
+			var example1 = $('#example1').dataTable( {
 				"oLanguage": {
 				      "sInfoEmpty": "No entries to show"
 				    },
