mods to add dizzyheights.com data

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -756,7 +756,7 @@ rel="stylesheet" type="text/css">
 			  <h3><a id="F1"><script>document.write(feature_list[1].replace(/_/g," "));</script></a></h3>
 				  
 		  <div id="dynamic">
-			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example1">
+			  <table cellpadding="0" cellspacing="0" border="0" class="display example1" id="example1">
 				  <thead>
 					<tr>
 						<th width="70%" rowspan="2">Page URL</th>
