--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -193,10 +193,8 @@ var feature_list= {1:"average_backlink_flesch_reading_ease",
 
 
 		$(document).ready(function() {
-			var example1 = $('#example1').dataTable( {
-				"oLanguage": {
-				      "sInfoEmpty": "No entries to show"
-				    },
+			$('#example1').dataTable( {
+				"bProcessing": true,
 				"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 				"sAjaxDataProp": "onsite."+ feature_list[1],
 				"aoColumns": [
@@ -756,7 +754,7 @@ rel="stylesheet" type="text/css">
 			  <h3><a id="F1"><script>document.write(feature_list[1].replace(/_/g," "));</script></a></h3>
 				  
 		  <div id="dynamic">
-			  <table cellpadding="0" cellspacing="0" border="0" class="display example1" id="example1">
+			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example1">
 				  <thead>
 					<tr>
 						<th width="70%" rowspan="2">Page URL</th>
