--- a/tour.html
+++ b/tour.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>
+    <title>MathSight Demo
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -38,14 +38,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">MathSight</a>
+          <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li><a href="/">Home</a></li>
-                <li><a href="/plans.html">Plans</a></li>
-                <li class="active"><a href="/tour.html">Tour</a></li>
+                <!-- <li><a href="/plans.html">Plans</a></li> -->
+                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
 				<li><a href="/api.html">API</a></li>
-				<li><a href="/jobs.html">Jobs</a></li>
+				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
