mods to hide average feature value column in statseo.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li><a href="/">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
                 <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
 				<li><a href="/api.html">API</a></li>
