--- a/statseo.html
+++ b/statseo.html
@@ -219,7 +219,7 @@ var websiteName = websiteSplit[1];
 		null,
 		{"bVisible": false},
 		null,
-		null,		
+		{"bVisible": false},		
 		{"bVisible": false},
 		{"bVisible": false},
 		{"bVisible": false},
@@ -243,7 +243,7 @@ var websiteName = websiteSplit[1];
 			{"bVisible": false},
 			{"bVisible": false},
 			null,
-			null,
+			{"bVisible": false},
 			{"bVisible": false}
 			]
 		} );
@@ -269,7 +269,7 @@ var websiteName = websiteSplit[1];
 		null,
 		{"bVisible": false},
 		null,
-		null,		
+		{"bVisible": false},		
 		{"bVisible": false},
 		{"bVisible": false},
 		{"bVisible": false},
@@ -293,7 +293,7 @@ var websiteName = websiteSplit[1];
 			{"bVisible": false},
 			{"bVisible": false},
 			null,
-			null,
+			{"bVisible": false},
 			{"bVisible": false}
 			]
 	    } );
@@ -437,14 +437,14 @@ nv.addGraph(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">MathSight</a>
+          <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/plans.html">Plans</a></li>
-                <li class="active"><a href="/tour.html">Tour</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <!-- <li><a href="/plans.html">Plans</a></li> -->
+                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
 				<li><a href="/api.html">API</a></li>
-				<li><a href="/jobs.html">Jobs</a></li>
+				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
