--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -666,14 +666,14 @@ rel="stylesheet" type="text/css">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">MathSight</a>
+          <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/plans.html">Plans</a></li>
-                <li class="active"><a href="/tour.html">Tour</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <!-- <li><a href="/plans.html">Plans</a></li> -->
+                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
 				<li><a href="/api.html">API</a></li>
-				<li><a href="/jobs.html">Jobs</a></li>
+				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
           </div><!--/.nav-collapse -->
         </div>
