--- a/login.html
+++ b/login.html
@@ -47,6 +47,30 @@
 
 </head>
 <body>
+	
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="/">MathSight Demo</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+                <li class="active"><a href="/">Home</a></li>
+                <!-- <li><a href="/plans.html">Plans</a></li> -->
+                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
+				<li><a href="/api.html">API</a></li>
+				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+	
+	
   <div class="container">
     <div class="content">
       <div class="row">
