--- a/login.html
+++ b/login.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>MathSight Demo Login</title>
-    <meta name="description" content="">
+    <meta name="description" content="Login page">
     <meta name="author" content="MathSight Ltd">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+	
     <style type="text/css">
       /* Override some defaults */
-      html, body {
-        background-color: #eee;
-      }
-      body {
-        padding-top: 40px; 
-      }
-      .container {
-        width: 300px;
-      }
+	  html, body {
+		  background-color: #eee;
+	  }
+	  body { padding-top: 60px; /* 60px to make the container go all the way
+		  to the bottom of the topbar */ 
+	  }
+	  .container {
+		  width: 300px;
+	  }
 
       /* The white background content wrapper */
       .container > .content {
