--- a/login.html
+++ b/login.html
@@ -91,7 +91,28 @@
           </form>
         </div>
       </div>
-    </div>
-  </div> <!-- /container -->
+  </div>
+</div> <!-- /container -->
+
+<div class="row-fluid footer">
+  <div class="span12">
+	  <p><small>© MathSight Ltd 2013 &nbsp; &nbsp;Terms of Service &nbsp; &nbsp;Privacy &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Run by MathSight Ltd in Richmond, UK<small></p>
+	  </div>
+  </div>
+
+  <style>
+      
+  /* To push content below navbar */
+  @media (min-width: 980px) {
+	  body {
+		  margin-top: 41px;
+	  }
+  }
+      
+  </style>
+  <script src="assets/js/bootstrap.js">
+  </script>
+
+  
 </body>
 </html>
