--- a/login.html
+++ b/login.html
@@ -5,13 +5,14 @@
     <title>MathSight Demo Login</title>
     <meta name="description" content="Login page">
     <meta name="author" content="MathSight Ltd">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-	
+
+	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 	
 
 	<style type="text/css">
