--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -125,7 +125,7 @@
 
 // data for chart
 
-var websiteURL = "www.dizzyheights.com";
+var websiteURL = "www.stealthgenie.com";
 var websiteSplit = websiteURL.split(".");
 var websiteName = websiteSplit[1];
 
